[package]
name = "xds"
version = "0.1.0"
authors = ["Michiel Kalkman <michiel@nosuchtype.com>"]

[dependencies]
env_logger = "0.5"
actix = "0.5"
actix-web = "0.4.10"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

juniper = "0.9.2"

diesel = { version = "1.1.0", features = ["sqlite"] }
diesel_infer_schema = { version = "1.1.0", features = ["sqlite"] }
dotenv = "0.10"
